changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

CRE: tool to create base for smoothed face from a face.
Nicolas Weeger 2010-08-02

Fix bug #2546538: odd rune spell behavior.
Don't check grace cost against player's grace if no grace cost.
Nicolas Weeger 2010-08-01

Don't display attenuation or repell if denied.
Fixes part of #2941923: 11 bugs, alchemy, spell attunement, npc shops, client (WIN).
Nicolas Weeger 2010-08-01

Fix bug #3018536: duplication of items in containers.
Correctly free the removed item's inventory.
Also fix invalid carrying field.
Nicolas Weeger 2010-08-01

Remove deprecated function.
Nicolas Weeger 2010-08-01

Fix knowledge for recipes not displaying the required cauldron.
Nicolas Weeger 2010-08-01

CRE: correctly display artifacts that can be made via alchemy.
Nicolas Weeger 2010-08-01

Fix lighter message containing 'NULL'.
Nicolas Weeger 2010-08-01

Fix a unit test.
Nicolas Weeger 2010-08-01

CRE: add a 'spell table' report.
Nicolas Weeger 2010-07-29

Replace some calls to describe_item() with the StringBuffer version.
Nicolas Weeger 2010-07-29

Rewrite 'describe_item' to use StringBuffer.
Nicolas Weeger 2010-07-29

Rewrite 'describe_resistance' to use StringBuffer.
Nicolas Weeger 2010-07-29

Changes related to new character creation code - add new settings value
which determine stat ranges, split out the requestinfo replies to its
own file (request.c was getting a bit large), add handling for 'newcharinfo'
requestinfo, document this in the protocol file.  NOTE: you will need to
re-run automake & configure to pick up the new source file.
---