@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Don't switch to golem mode if summon failed.
+Nicolas Weeger 2010-08-04
+
 CRE: tool to create base for smoothed face from a face.
 Nicolas Weeger 2010-08-02
 
